# azure_eventhub_to_loki

./: .gitignore  .swp  DEVELOPER.md  Makefile  README.md  azdeploy.json  buf.gen.yaml  eslint.config.js  function_app.py  index.js  package-lock.json  package.json  push.proto  pyproject.toml  release.sh  requirements.txt  template.json
.github/workflows/: ci.yml
logexport/: _version.py  config.py  deserialize.py  filter.py  resource.py
logexport/loki/: client.py
logexport/push/: push_pb2.py  push_pb2.pyi
push/: push_pb2.py  push_pb2.pyi
push/gogoproto/: gogo_pb2.py
tests/: index.test.js  loki_test_server.py  record_sample.json  test_config.py  test_deserialization.py  test_filter.py  test_loki_client.py  test_serialization.py
