[project]
authors = [
  {name = "Grafana Labs"},
]
dependencies = [
  "azure-functions==1.24.0",
  "jq==1.10.0",
  "protobuf==5.29.5",
  "python-snappy==0.7.3",
  "requests==2.32.5",
]
description = "Azure function to send eventhub events to Grafana Loki / Grafana Cloud"
dynamic = ["version"]
name = "logexport"
requires-python = ">= 3.11"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project.optional-dependencies]
package = [
  "setuptools_scm>=8",
]
test = [
  "black==25.11.0",
  "isort==6.1.0",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "testcontainers==4.13.2",
  "types-protobuf==5.29.1.20250403",
  "types-requests==2.32.4.20250913",
]

[tool.black]
exclude = "logexport/_version.py"

[tool.isort]
profile = "black"
skip = ["logexport/_version.py"]
src_paths = ["logexport", "tests", "function_app.py"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]

[tool.setuptools]
packages = ["logexport", "logexport.push"]

[tool.setuptools_scm]
version_file = "logexport/_version.py"
