[project]
authors = [
  {name = "Grafana Labs"},
]
dependencies = [
  "azure-mgmt-core==1.6.0",
  "azure-functions==2.1.0",
  "jq==1.11.0",
  "protobuf==6.33.6",
  "python-snappy==0.7.3",
  "requests==2.33.1",
]
description = "Azure function to send eventhub events to Grafana Loki / Grafana Cloud"
dynamic = ["version"]
name = "logexport"
requires-python = ">= 3.11"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project.optional-dependencies]
package = [
  "setuptools_scm>=8",
]
test = [
  "black==26.3.1",
  "isort==8.0.1",
  "mypy==1.20.2",
  "pytest==9.0.3",
  "testcontainers==4.14.2",
  "types-protobuf==6.32.1.20251105",
  "types-requests==2.33.0.20260408",
]

[tool.black]
exclude = "logexport/_version.py"

[tool.isort]
profile = "black"
skip = ["logexport/_version.py"]
src_paths = ["logexport", "tests", "function_app.py"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]

[tool.setuptools]
packages = ["logexport", "logexport.push"]

[tool.setuptools_scm]
version_file = "logexport/_version.py"
